# ppc

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  REPRODUCIBILITY.md  claude.md  environment.yml  project_spec.md  pytest.ini  todo.txt
analysis/: compute_ppc.py  compute_roofline.py  decision_framework.py  generate_plots.py  overhead_attribution.py  root_cause_analysis.py
benchmarks/bfs/: config.yaml
benchmarks/dgemm/: config.yaml
benchmarks/nbody/: config.yaml
benchmarks/spmv/: config.yaml
benchmarks/sptrsv/: config.yaml
benchmarks/stencil/: config.yaml
benchmarks/stream/: config.yaml
containers/: Dockerfile.amd  Dockerfile.nvidia  Singularity.def
data/: performance.csv  productivity_metrics.csv  profiling_metrics.csv  taxonomy.json
data/notes/: thermal_contamination_20260314.md
data/processed/: .gitignore  e1_stream_summary.csv  e2_dgemm_summary.csv  e4_spmv_summary.csv  e5_sptrsv_summary.csv  e6_bfs_summary.csv  e7_nbody_summary.csv  ppc_e1_amd_mi300x.csv  ppc_e2_amd_mi300x.csv  ppc_e2_cross_platform.csv  ppc_e2_nvidia_rtx5060_laptop.csv  profiling_queue.csv
data/raw/: .gitignore  bfs_julia_amd_mi300x_20260321.csv  bfs_julia_nvidia_h100_sxm_20260328.csv  bfs_julia_nvidia_h100_sxm_20260329.csv  bfs_julia_nvidia_rtx5060_20260316.csv  bfs_julia_nvidia_rtx5060_laptop_20260316.csv  bfs_kokkos_amd_mi300x_20260321.csv  bfs_kokkos_nvidia_rtx5060_20260321.csv  bfs_native_amd_mi300x_20260321.csv  bfs_native_nvidia_h100_sxm_20260328.csv  bfs_native_nvidia_rtx5060_20260316.csv  bfs_native_nvidia_rtx5060_laptop_20260316.csv  bfs_profile_amd_mi300x_20260321.csv  bfs_profile_nvidia_h100_sxm_20260328.csv  bfs_profile_nvidia_h100_sxm_20260329.csv  bfs_profile_nvidia_rtx5060_20260316.csv  bfs_profile_nvidia_rtx5060_20260321.csv  bfs_profile_nvidia_rtx5060_laptop_20260316.csv  bfs_raja_amd_mi300x_20260321.csv  bfs_raja_nvidia_rtx5060_20260321.csv  bfs_sycl_amd_mi300x_20260321.csv  dgemm_julia_cublas_nvidia_h100_sxm_20260328.csv  dgemm_julia_cublas_nvidia_rtx5060_20260314.csv  dgemm_julia_cublas_nvidia_rtx5060_laptop_20260314.csv  dgemm_julia_naive_amd_mi300x_20260320.csv  dgemm_julia_naive_nvidia_h100_sxm_20260328.csv  dgemm_julia_naive_nvidia_rtx5060_20260314.csv  dgemm_julia_naive_nvidia_rtx5060_laptop_20260314.csv  dgemm_julia_rocblas_amd_mi300x_20260320.csv  dgemm_kokkos_amd_mi300x_20260320.csv  dgemm_native_amd_mi300x_20260320.csv  dgemm_native_cublas_nvidia_h100_sxm_20260328.csv  dgemm_native_cublas_nvidia_rtx5060_20260314.csv  dgemm_native_cublas_nvidia_rtx5060_laptop_20260314.csv  dgemm_native_nvidia_h100_sxm_20260328.csv  dgemm_native_nvidia_rtx5060_20260314.csv  dgemm_native_nvidia_rtx5060_laptop_20260314.csv  dgemm_native_rocblas_amd_mi300x_20260320.csv  dgemm_numba_nvidia_h100_sxm_20260328.csv  dgemm_numba_nvidia_rtx5060_laptop_20260314.csv  (+99 more)
docs/: README.md
kernels/bfs/: CMakeLists.txt  bfs_common.h  gpu_compat.h  kernel_bfs_cuda.cu  kernel_bfs_hip.cpp  kernel_bfs_julia.jl  kernel_bfs_kokkos.cpp  kernel_bfs_raja.cpp  kernel_bfs_sycl.cpp
kernels/dgemm/: CMakeLists.txt  Manifest.toml  dgemm_common.h  gpu_compat.h  kernel_dgemm_cuda.cu  kernel_dgemm_hip.cpp  kernel_dgemm_julia.jl  kernel_dgemm_kokkos.cpp  kernel_dgemm_numba.py  kernel_dgemm_raja.cpp  kernel_dgemm_sycl.cpp
kernels/nbody/: kernel_nbody_cuda.cu  kernel_nbody_julia.jl  nbody_common.h
kernels/spmv/: CMakeLists.txt  gpu_compat.h  kernel_spmv_cuda.cu  kernel_spmv_hip.cpp  kernel_spmv_julia.jl  kernel_spmv_kokkos.cpp  kernel_spmv_numba.py  kernel_spmv_raja.cpp  kernel_spmv_sycl.cpp  spmv_common.h
kernels/sptrsv/: gpu_compat.h  kernel_sptrsv_cuda.cu  kernel_sptrsv_hip.cpp  kernel_sptrsv_julia.jl  kernel_sptrsv_kokkos.cpp  kernel_sptrsv_raja.cpp  kernel_sptrsv_sycl.cpp  sptrsv_common.h
kernels/stencil/: CMakeLists.txt  gpu_compat.h  kernel_stencil_cuda.cu  kernel_stencil_hip.cpp  kernel_stencil_julia.jl  kernel_stencil_kokkos.cpp  kernel_stencil_numba.py  kernel_stencil_raja.cpp  kernel_stencil_sycl.cpp  stencil_common.h
kernels/stream/: CMakeLists.txt  Project.toml  README.md  kernel_stream_amdgpu.jl  kernel_stream_cuda.cu  kernel_stream_hip.cpp  kernel_stream_julia.jl  kernel_stream_kokkos.cpp  kernel_stream_numba.py  kernel_stream_raja.cpp  kernel_stream_sycl.cpp  stream-amdgpu  stream-julia  stream-numba  stream_common.h
notebooks/: 01_baseline_exploration.ipynb  02_ppc_analysis.ipynb  03_overhead_attribution.ipynb  04_taxonomy_construction.ipynb  05_decision_framework_validation.ipynb
paper/: introduction.tex  main.tex  references.bib  section2_background.tex  section3_related.tex  section3_related_work.tex  section4_methodology.tex  section5_experiments.tex  section6_taxonomy.tex  section7_decision_framework.tex  section8_validation.tex  section9_conclusion.tex
paper/related_works/: High Productivity Programming.txt  https www mhpc it how.txt
profiles/e2/: e2_profiling_notes.md  julia_naive_large_nsys.nsys-rep  julia_naive_large_nsys.sqlite  julia_naive_medium_nsys.nsys-rep  julia_naive_medium_nsys.sqlite  raja_naive_medium_nsys.nsys-rep  raja_naive_medium_nsys.sqlite
profiles/e3/: e3_profiling_notes.md
profiles/e5/: e5_profiling_notes.md
results/: .gitignore
results/amd_mi300x/: env_log.txt
results/nvidia_a100/: env_log.txt
results/nvidia_h100_sxm/: env_log.txt
results/nvidia_rtx5060/: env_log.txt
results/nvidia_rtx5060_laptop/: env_log.txt
scripts/: plot_e1.py  plot_e2.py  plot_e2_multiplatform.py  plot_e2_roofline.py  plot_e3.py  plot_e3_multiplatform.py  plot_e3_roofline.py  plot_e4.py  plot_e4_roofline.py  process_e1.py  process_e2.py  process_e3.py  process_e4.py
scripts/analysis/: plot_e5.py  plot_e5_roofline.py  plot_e6.py  plot_e6_roofline.py  plot_e7.py  plot_e7_roofline.py  process_e5.py  process_e6.py  process_e7.py
scripts/e7_nbody/: build_nbody.sh  plot_e7.py  plot_e7_roofline.py  process_e7.py  run_nbody.sh
src/e7_nbody/: CMakeLists.txt  gpu_compat.h  nbody_common.h  nbody_hip.cpp  nbody_julia.jl  nbody_kokkos.cpp  nbody_native.cu  nbody_raja.cpp  nbody_sycl.cpp
tests/: conftest.py
tool/: README.md
(+28 files in other folders)
